--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </ul>
     </nav>
     </header>
-
+<section id ="corpo">
+<aside id ="lateral">
 <hgroup>
 <h3>Tecnologia > Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
@@ -67,8 +68,7 @@ Memória Interna: 12GB
 <h2>O que você pode fazer com o Google Glasses</h2>
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
 </p>
-
-[AQUI ENTRA UM VÍDEO]
+</section>
 
 <h2>Outras Notícias</h2>
 <h2>Vídeo mais recente</h2>
@@ -81,10 +81,13 @@ Memória Interna: 12GB
 
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.
 </p>
-
-<p>Copyright 2013 &copy;- by Gustavo Guanabara
-Facebook | Twitter
+</aside>
+<footer id="rodape">
+<p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
+<a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
+<a href="http:// globo.com.br" target="_blank">globo.com</a>
 </p>
+</footer>
 </div>
         
 </body>
