--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>        
 <body>
 <div id="interface">
-
     <header id="cabecalho">
     <hgroup>
     <h1>Google Glass</h1>
@@ -27,16 +26,19 @@
     </nav>
     </header>
 <section id ="corpo">
-<aside id ="lateral">
+
+<article id="artigo">
+<header id="cabecalho">
 <hgroup>
 <h3>Tecnologia > Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
 <h2>por Gustavo Guanabara</h2>
-<h3>Atualizado em 23/Abril/2013</h3>
+<h3 class="direita">Atualizado em 23/Abril/2013</h3>
 </hgroup>
+</header>
 
-<h2 >O que é</h2>
-<p>O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.
+<h2>O que é</h2>
+<p>O <span style="..."></span>Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.
 </p>
 <figure class="foto-legenda">
     <img src="imagens/glass-quadro-homem-mulher.jpg"/>
@@ -44,14 +46,13 @@
         <h3>google glass</h3>
         <p>uma nova maneira de ver o mundo.</p>
     </figcaption>
-
 </figure>
 
 <h2>Data de lançamento</h2>
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.
 </p>
 
-<h1>Especificações Técnicas</h1>
+<h2>Especificações Técnicas</h2>
 <table id="tabela">
 <caption>Técnica do Google Glass<span> Mar/2013</span></caption> 
 
@@ -71,11 +72,12 @@
 <h2>O que você pode fazer com o Google Glasses</h2>
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
 </p>
+</article>
+[AQUI ENTRA UM VÍDEO]
 </section>
-
-<h2>Outras Notícias</h2>
+<aside id="lateral">
+<h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
-
 [AQUI ENTRA UM VÍDEO]
 
 <h2>Novidades no Glass</h2>
