--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>        
 <body>
 <div id="interface">
+
     <header id="cabecalho">
     <hgroup>
     <h1>Google Glass</h1>
@@ -27,8 +28,9 @@
     </header>
 <section id ="corpo">
 
+<article id="noticia-principal">
 <article id="artigo">
-<header id="cabecalho">
+<header id="cabecalho-artigo">
 <hgroup>
 <h3>Tecnologia > Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
@@ -38,7 +40,7 @@
 </header>
 
 <h2>O que é</h2>
-<p>O <span style="..."></span>Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.
+<p>O <span style="...">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.
 </p>
 <figure class="foto-legenda">
     <img src="imagens/glass-quadro-homem-mulher.jpg"/>
@@ -62,7 +64,6 @@
 <tr><td class="ce"rowspan="2">Conectividade<td class="cd">Wi-Fi</td></tr>
 <tr><td class="cd">Bluetooth</td></tr>
 <tr><td class="ce">Memória Interna</td><td class="cd"> 12GB</td></tr>
-</p>
 </table>
 
 <h2>Como funciona</h2>
@@ -74,7 +75,9 @@
 </p>
 </article>
 [AQUI ENTRA UM VÍDEO]
+
 </section>
+
 <aside id="lateral">
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
