--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8"/>
     <title>tudo sobre google glass</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
-</head>        
+</head> 
+<script src="javascript/funcoes.js"></script>
+
 <body>
 <div id="interface">
 
@@ -18,11 +20,11 @@
     <nav id="menu">
     <h1>Menu principal</h1>
     <ul type="disc">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="specs.html">Especificações</a></li> 
-        <li><a href="Fotos.html">fotos</a></li>
-        <li><a href="multimidia.html">multimidia</a></li>
-        <li><a href="fale-conosco.html">fale conosco</a></li>
+        <li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">home</a></li>
+        <li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li> 
+        <li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="Fotos.html">fotos</a></li>
+        <li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">multimidia</a></li>
+        <li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">fale conosco</a></li>
     </ul>
     </nav>
     </header>
