--- a/specs.html
+++ b/specs.html
@@ -1,14 +1,33 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8"/>
+    <title>tudo sobre google glass</title>
+    <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+</head> 
+<script src="javascript/funcoes.js"></script>
 
-[AQUI ENTRA UMA FOTO]
+<body>
+<div id="interface">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+    <header id="cabecalho">
+    <hgroup>
+    <h1>Google Glass</h1>
+    <h2>A revolução do Google está chegando</h2>
+    </hgroup>
+    
+    <img id="icone" src="imagens/glass-oculos-preto-peq.png">
+    <nav id="menu">
+    <h1>Menu principal</h1>
+    <ul type="disc">
+        <li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">home</a></li>
+        <li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li> 
+        <li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="Fotos.html">fotos</a></li>
+        <li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">multimidia</a></li>
+        <li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">fale conosco</a></li>
+    </ul>
+    </nav>
+    </header>
 
 Glass > Especificações
 Raio-X no Google Glass
@@ -19,5 +38,9 @@ Clique em qualquer área destacada da imagem para ter mais informações sobre o
 
 [AQUI ENTRA UMA IMAGEM]
 
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+<footer id="rodape">
+    <p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
+    <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
+    <a href="http:// globo.com.br" target="_blank">globo.com</a>
+    </p>
+    </footer>
