--- a/specs.html
+++ b/specs.html
@@ -20,8 +20,8 @@
     <nav id="menu">
     <h1>Menu principal</h1>
     <ul type="disc">
-        <li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">home</a></li>
-        <li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li> 
+        <li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="index.html">home</a></li>
+        <li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li> 
         <li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="Fotos.html">fotos</a></li>
         <li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">multimidia</a></li>
         <li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">fale conosco</a></li>
