--- a/google-glass.html
+++ b/google-glass.html
@@ -69,7 +69,7 @@
         <h2>Sensibilidade de um simples óculos</h2>
     </header>
 <p>Quem pensa que para comandar o Google Glass vai precisar de teclado e mouse, se engana redondamente. O dispositivo vem com vários tipos de sensores e microfones embutidos. Assim, para dar um comando, basta falar ou passar o dedo na lateral do óculos.</p>
-<img src="imagens/det-touch.jpg" alt="Sensores do Google Glass"
+<img src="imagens/det-touch.jpg" alt="Sensores do Google Glass"/>
 </article>
 
 <article id="gadgats">
