--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <title>tudo sobre google glass</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+    <link rel="stylesheet"  href="css/estilo.css"/>
+    <link rel="stylesheet"  href="css/specs.css" />
 </head> 
-<script src="javascript/funcoes.js"></script>
+<script  language="javascript" src="javascript/funcoes.js"></script>
 
 <body>
 <div id="interface">
