--- a/specs.html
+++ b/specs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>tudo sobre google glass</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+    <link rel="stylesheet" href="css/estilo.css"/>
 </head> 
 <script src="javascript/funcoes.js"></script>
 
@@ -12,8 +12,8 @@
 
     <header id="cabecalho">
     <hgroup>
-    <h1>Google Glass</h1>
-    <h2>A revolução do Google está chegando</h2>
+        <h1>Google Glass</h1>
+        <h2>A revolução do Google está chegando</h2>
     </hgroup>
     
     <img id="icone" src="imagens/glass-oculos-preto-peq.png">
@@ -29,18 +29,33 @@
     </nav>
     </header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<section id="corpo-full" > 
+    <article id="noticia-principal">
+        <header id="cabecalho-artigo">
+        <hgroup>
+            <h3>Glass > Especificações</h3>
+            <h1>Raio-X no Google Glass</h1>
+            <h2>por Gustavo Guanabara</h2>
+            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+        </hgroup>
+        </header>
+        
+<p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+    <section id="conteudo">
+        <img src="imagens/glass-esquema-marcado.jpg"/>
+        <iframe src="google-glass.html" name="janela" id="frame-spec"></iframe>
+    </section>
 
-[AQUI ENTRA UMA IMAGEM]
+    </article>
+</section> >
 
 <footer id="rodape">
     <p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
     <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
     <a href="http:// globo.com.br" target="_blank">globo.com</a>
     </p>
-    </footer>
+</footer>
+</div>
+</body>
+</html>
