--- a/fotos.html
+++ b/fotos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>tudo sobre google glass</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+    <link rel="stylesheet" href="css/fotos.css"/>
 </head> 
 <script src="javascript/funcoes.js"></script>
 
@@ -16,36 +17,49 @@
     <h2>A revolução do Google está chegando</h2>
     </hgroup>
     
-    <img id="icone" src="imagens/glass-oculos-preto-peq.png">
+    <img id="icone" src="imagens/fotos.png">
     <nav id="menu">
     <h1>Menu principal</h1>
     <ul type="disc">
-        <li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">home</a></li>
-        <li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li> 
-        <li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="Fotos.html">fotos</a></li>
-        <li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">multimidia</a></li>
-        <li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">fale conosco</a></li>
+        <li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/fotos.png')"><a href="index.html">home</a></li>
+        <li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/fotos.png')"><a href="specs.html">Especificações</a></li> 
+        <li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/fotos.png')"><a href="Fotos.html">fotos</a></li>
+        <li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/fotos.png')"><a href="multimidia.html">multimidia</a></li>
+        <li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/fotos.png')"><a href="fale-conosco.html">fale conosco</a></li>
     </ul>
     </nav>
     </header>
+    <section id="corpo-full" > 
+        <article id="noticia-principal">
+        <header id="cabecalho-artigo">
+            <hgroup>
+                <h3>Glass > Fotos</h3>
+                <h1>Galeria de imagens do google glass</h1>
+                <h2>por Gustavo Guanabara</h2>
+                <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+            </hgroup>
+        </header>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+  <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+<ul id="album-fotos">
+   <li id="foto01"><span>Agenda e lembretes</span></li>
+   <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
+   <li id="foto03"><span>Leve e compacto</span></li>
+   <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
+   <li id="foto05"><span>Vários tipos de lente</span></li>
+   <li id="foto06"><span>Informações importantes</span></li>
+</ul>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+</article>
+</section>
 
 <footer id="rodape">
     <p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
     <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
     <a href="http:// globo.com.br" target="_blank">globo.com</a>
     </p>
-    </footer>
+</footer>
+</div>
+</body>
+</html>
