--- a/specs.html
+++ b/specs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>tudo sobre google glass</title>
     <link rel="stylesheet" href="css/estilo.css"/>
+    <link rel="stylesheet" href="css/specs.css"/>
 </head> 
 <script src="javascript/funcoes.js"></script>
 
@@ -31,14 +32,14 @@
 
 <section id="corpo-full" > 
     <article id="noticia-principal">
-        <header id="cabecalho-artigo">
+    <header id="cabecalho-artigo">
         <hgroup>
             <h3>Glass > Especificações</h3>
             <h1>Raio-X no Google Glass</h1>
             <h2>por Gustavo Guanabara</h2>
             <h3 class="direita">Atualizado em 01/Maio/2013</h3>
         </hgroup>
-        </header>
+    </header>
         
 <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
