--- a/fotos.html
+++ b/fotos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>tudo sobre google glass</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
-    <link rel="stylesheet" href="css/fotos.css"/>
+    <link rel="stylesheet" type="text/css" href="css/fotos.css"/>
 </head> 
 <script src="javascript/funcoes.js"></script>
 
