--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -63,7 +63,7 @@ Quero um Google Glass
 [BOTÃO ENVIAR]
 
 <footer id="rodape">
-    <p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
+    <p>Copyright 2024 &copy;- by Deivd Bastos</br>
     <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
     <a href="http:// globo.com.br" target="_blank">globo.com</a>
     </p>
