--- a/fotos.html
+++ b/fotos.html
@@ -55,7 +55,7 @@
 </section>
 
 <footer id="rodape">
-    <p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
+    <p>Copyright 2024 &copy;- by Deivd Bastos</br>
     <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
     <a href="http:// globo.com.br" target="_blank">globo.com</a>
     </p>
