--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <hgroup>
 <h3>Tecnologia > Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
-<h2>por Gustavo Guanabara</h2>
-<h3 class="direita">Atualizado em 23/Abril/2013</h3>
+<h2>por Deivd Bastos</h2>
+<h3 class="direita">Atualizado em 20/maio/2024</h3>
 </hgroup>
 </header>
 
@@ -93,7 +93,7 @@
 </p>
 </aside>
 <footer id="rodape">
-<p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
+<p>Copyright 2024 &copy;- by deivd Bastos</br>
 <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
 <a href="http:// globo.com.br" target="_blank">globo.com</a>
 </p>
