--- a/multimidia.html
+++ b/multimidia.html
@@ -31,8 +31,8 @@
 
 Glass > Multimídia
 Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+por Deivd Bastos
+Atualizado em 20/05/2024
 
 
 Áudio e Vídeo
@@ -41,7 +41,7 @@ Atualizado em 01/Maio/2013
 [AQUI ENTRA UM ÁUDIO]
 
 <footer id="rodape">
-    <p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
+    <p>Copyright 2024 &copy;- by Deivd Bastos</br>
     <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
     <a href="http:// globo.com.br" target="_blank">globo.com</a>
     </p>
