--- a/specs.html
+++ b/specs.html
@@ -36,8 +36,8 @@
         <hgroup>
             <h3>Glass > Especificações</h3>
             <h1>Raio-X no Google Glass</h1>
-            <h2>por Gustavo Guanabara</h2>
-            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+            <h2>por Deivd bastos</h2>
+            <h3 class="direita">Atualizado em 20/maio/2024</h3>
         </hgroup>
     </header>
         
@@ -58,7 +58,7 @@
 </section> >
 
 <footer id="rodape">
-    <p>Copyright 2013 &copy;- by Gustavo Guanabara</br>
+    <p>Copyright 2024 &copy;- by Deivd Bastos</br>
     <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
     <a href="http:// globo.com.br" target="_blank">globo.com</a>
     </p>
