--- a/fotos.html
+++ b/fotos.html
@@ -35,8 +35,8 @@
             <hgroup>
                 <h3>Glass > Fotos</h3>
                 <h1>Galeria de imagens do google glass</h1>
-                <h2>por Gustavo Guanabara</h2>
-                <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                <h2>por Deivd Bastos</h2>
+                <h3 class="direita">Atualizado em 20/maio/2024</h3>
             </hgroup>
         </header>
 
