--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>tudo sobre google glass</title>
     <link rel="stylesheet"  href="css/estilo.css"/>
     <link rel="stylesheet"  href="css/specs.css" />
+    <link rel="stylesheet"  href="css/fotos.css" />
 </head> 
 <script  language="javascript" src="javascript/funcoes.js"></script>
 
