--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 </aside>
 <footer id="rodape">
 <p>Copyright 2024 &copy;- by deivd Bastos</br>
-<a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
-<a href="http:// globo.com.br" target="_blank">globo.com</a>
+<a href="http://facebook.com/cursoemvideo" target="_blank">facebook.com.br</a>|
+<a href="http:// globo.com.br" target="_blank">globo.com.br</a>
 </p>
 </footer>
 </div>
