--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <footer id="rodape">
 <p>Copyright 2024 &copy;- by deivd Bastos</br>
 <a href="http://deivd05.github.io/projeto-pagina-web-deivd" target="_blank">deivd bastos</a>|
-<a href="http:// globo.com" target="_blank">globo</a>
+<a href="http://www.globo.com" target="_blank">globo</a>
 </p>
 </footer>
 </div>
