--- a/fotos.html
+++ b/fotos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>tudo sobre google glass</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
     <link rel="stylesheet" type="text/css" href="css/fotos.css"/>
