--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -71,4 +71,7 @@
     <a href="http://facebook.com/cursoemvideo" target="_blank">facebook </a>|
     <a href="http:// globo.com.br" target="_blank">globo.com</a>
     </p>
-    </footer>
+</footer>
+</div>
+</body>
+</html>
