--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -36,7 +36,7 @@
     </nav>
     </header>
 
-<form method="post" id="fcontato" action="mailto:deivdbastos5@gmail.com" oninput="calc_total();">
+<form method="post" id="fcontato" action="mailto:deivdbastos@gmail.com" oninput="calc_total();">
 
 <fieldset id="usuario"><legend>identificação do Usuário</legend>
     <p><label for="cnome">Nome:</label><input type="text" name="tnome" id="cnome" size="20" maxlength="30" placeholder="nome completo"/></p>
